# spaced_repetition

./: .gitignore  CMakeLists.txt  README.md
Database/: ProbaDataBase.db
UI/: addnewdeckwindow.ui  editwindow.ui  imagewidget.ui  learnwidget.ui  learnwindow.ui  learnwindowtemp.ui  mainwindow.ui  soundwidget.ui  startwidget.ui  textwidget.ui
src/: AddNewDeckWindow.cpp  AddNewDeckWindow.h  Algorithm.cpp  Algorithm.h  DatabaseController.cpp  DatabaseController.h  EditWindow.cpp  EditWindow.h  Flashcard.cpp  Flashcard.h  FlashcardWidget.cpp  FlashcardWidget.h  ImageWidget.cpp  ImageWidget.h  LearnWidget.cpp  LearnWidget.h  Main.cpp  MainWindow.cpp  MainWindow.h  SoundWidget.cpp  SoundWidget.h  StartWidget.cpp  StartWidget.h  TextWidget.cpp  TextWidget.h
tests/: UnitTestsAlgorithm.cpp  UnitTestsDatabase.cpp  UnitTestsFlashcard.cpp  UnitTestsImageWidget.cpp  UnitTestsSoundWidget.cpp
